--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch GLCanvas",
+            "request": "launch",
+            "mainClass": "com.jogamp.opengl.awt.GLCanvas",
+            "projectName": "java"
+        },
+        {
+            "type": "java",
+            "name": "Launch PApplet",
+            "request": "launch",
+            "mainClass": "processing.core.PApplet",
+            "projectName": "java"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Main",
             "request": "launch",
             "mainClass": "ie.tudublin.Main",
